@@ -52,6 +52,11 @@ Priority | Area            | Task
  High    |CTests           | Turn testsuite into a library which includes
  	 |		   | main(), needing just a table of test functions.
 ---------+-----------------+--------------------------------------------------
+ Medium  | MatchOptions    | Pass all options to matcher (sort order,
+         |                 | weighting scheme, and max query terms) right
+	 |                 | down to LocalMatch object.  Implement max query
+	 |                 | terms.
+---------+-----------------+--------------------------------------------------
  Medium  | Databases       | Make OmDatabaseGroup::Internal return same
          |                 | multidatabase object if get_multi_database() is
 	 |                 | called repeatedly without calling add_database()
