@@ -1,3 +1,8 @@
+Fri May  5 18:55:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Pass MatchOptions object down to LocalMatch, rather than
+	  interpreting at API level.
+
 Fri May  5 16:55:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Add option to MatchOptions to set a maximum number of terms to
